--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "body-parse": "^0.1.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "body-parser": "^1.19.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
